# zomato

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
data/cache/: restaurants.parquet
docs/: architecture.md  context.md  deployment-plan.md  edge-cases.md  implementation-plan.md  manual-testing-phase6.md
scripts/: inspect_dataset.py  test_live_api.py
src/: __init__.py  cli.py
src/api/: __init__.py  main.py  routes.py
src/app/: main.py  pipeline.py
src/data/: __init__.py  loader.py  preprocessor.py  repository.py  schema.py
src/models/: __init__.py  preferences.py  recommendation.py  restaurant.py
src/orchestration/: __init__.py  recommender.py
src/services/: __init__.py  filter_service.py  llm_service.py  prompt_builder.py
stitch_zomoto_ai_recommendations/: DESIGN.md  code.html
tests/: conftest.py  test_api.py  test_filter.py  test_frontend.py  test_llm_integration.py  test_llm_service.py  test_loader_integration.py  test_orchestrator.py  test_phase0_smoke.py  test_phase5_pipeline.py  test_pipeline.py  test_preferences.py  test_preprocessor.py  test_repository.py  test_settings.py
